todo-app/manifests-gke/todo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: header-image
          persistentVolumeClaim:
            claimName: todo-image-claim
      containers:
        - name: todo-frontend
          image: gcr.io/dwk-gke-509503/todo-frontend
          volumeMounts:
            - name: header-image
              mountPath: /usr/src/todo-frontend/header-image
