todo-app/manifests-gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-route
spec:
  parentRefs:
    - name: todo-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: todo-backend-svc
          port: 2345
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todo-frontend-svc
          port: 1234
